--- a/Mobile.html
+++ b/Mobile.html
@@ -435,9 +435,8 @@
                                 <div class="row">
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5 ">
                                         <div class="img-container" id="slide-container">
-                                            <a href="/each-products/OPPO Find X7 Ultra.html"> <img
-                                                    src="image/oppo amy special.jpg" class="img-item"
-                                                    alt="OPPO Find X7 Ultra"></a>
+                                             <img src="image/oppo amy special.jpg" class="img-item"
+                                                    alt="OPPO Find X7 Ultra">
                                             <h2 class="text-light">OPPO Find X7 Ultra</h2>
                                            <strike>$210</strike><span>-$204</span>
                                            <a href="/each-products/OPPO Find X7 Ultra.html" class="slide-cart" id="slide-cart"><span>Add Cart</span></a>
@@ -446,8 +445,7 @@
                                     </div>
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5" >
                                         <div class="img-container" id="slide-container2">
-                                            <a href="/each-products/OPPO F25 Pro.html"> <img src="image/oppo.jpg"
-                                                    class="img-item" alt="OPPO F25 Pro"></a>
+                                            <img src="image/oppo.jpg" class="img-item" alt="OPPO F25 Pro">
                                             <h2 class="text-light">OPPO F25 Pro</h2>
                                             <span>$259</span>
                                             <!-- <a href="login.html"><i class="fa-solid fa-cart-shopping nav-icons p-2" id="slide-cart"></i></a> -->
@@ -457,9 +455,8 @@
                                     </div>
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
                                         <div class="img-container" id="slide-container3">
-                                            <a href="/each-products/Samsung Galaxy A32.html" > <img
-                                                    src="images/samsung.jpg" class="img-item"
-                                                    alt="Samsung Galaxy A32"></a>
+                                             <img src="images/samsung.jpg" class="img-item"
+                                                    alt="Samsung Galaxy A32">
                                             <h2 class="text-light"> Samsung Galaxy A32</h2>
                                             <span>-$109.44</span>
                                             <a href="/each-products/Samsung Galaxy A32.html" class="slide-cart" id="slide-cart3"><span>Add Cart</span></a>
@@ -467,9 +464,8 @@
                                     </div>
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
                                         <div class="img-container" id="slide-container4">
-                                            <a href="/each-products/Oppo Reno 13 Pro.html"><img
-                                                    src="image/PHONE- (1).jpg" class="img-item"
-                                                    alt="Oppo Reno 13 Pro"></a>
+                                          <img src="image/PHONE- (1).jpg" class="img-item"
+                                                    alt="Oppo Reno 13 Pro">
                                             <h2 class="text-light">Oppo Reno 13 Pro</h2>
                                             <span><strike>$250</strike><span>-$240</span></span>
                                             <a href="/each-products/Oppo Reno 13 Pro.html" class="slide-cart" id="slide-cart4"><span>Add Cart</span></a>
@@ -477,9 +473,8 @@
                                     </div>
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
                                         <div class="img-container" id="slide-container5">
-                                            <a href="/each-products/Realme 12 X Pro Plus.html"> <img
-                                                    src="image/PHONE- (2).jpg" class="img-item"
-                                                    alt="Realme 12 X Pro Plus"></a>
+                                            <img src="image/PHONE- (2).jpg" class="img-item"
+                                                    alt="Realme 12 X Pro Plus">
                                             <h2 class="text-light">Realme 12 X Pro Plus</h2>
                                             <span><span>$275.57</span></span>
                                             <a href="/each-products/Realme 12 X Pro Plus.html" class="slide-cart" id="slide-cart5"><span>Add Cart</span></a>
@@ -487,9 +482,8 @@
                                     </div>
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
                                         <div class="img-container" id="slide-container6">
-                                            <a href="/each-products/Oppo Find N3 Flip.html"> <img
-                                                    src="image/PHONE- (5).jpg" class="img-item"
-                                                    alt="Oppo Find N3 Flip"></a>
+                                            <img  src="image/PHONE- (5).jpg" class="img-item"
+                                                    alt="Oppo Find N3 Flip">
                                             <h2 class="text-light">Oppo Find N3 Flip</h2>
                                             <span><strike>$230</strike><span>-$225</span></span>
                                             <a href="/each-products/Oppo Find N3 Flip.html" class="slide-cart" id="slide-cart6"><span>Add Cart</span></a>
@@ -497,8 +491,7 @@
                                     </div>
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
                                         <div class="img-container" id="slide-container7">
-                                            <a href="/each-products/iPhone 12 pro.html"> <img src="image/PHONE- (7).jpg"
-                                                    class="img-item" alt="iPhone 12 pro"></a>
+                                            <img src="image/PHONE- (7).jpg"  class="img-item" alt="iPhone 12 pro">
                                             <h2 class="text-light">iPhone 12 pro</h2>
                                             <span>$330</span>
                                             <a href="/each-products/iPhone 12 pro.html" class="slide-cart" id="slide-cart7"><span>Add Cart</span></a>
@@ -506,9 +499,8 @@
                                     </div>
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
                                         <div class="img-container" id="slide-container8">
-                                            <a href="/each-products/Oppo Reno 10 Pro+.html"> <img
-                                                    src="image/PHONE- (4).jpg" class="img-item"
-                                                    alt="Oppo Reno 10 Pro+"></a>
+                                            <img src="image/PHONE- (4).jpg" class="img-item"
+                                                    alt="Oppo Reno 10 Pro+">
                                             <h2 class="text-light">Oppo Reno 10 Pro+</h2>
                                             <span>-$120</span>
                                             <a href="/each-products/Oppo Reno 10 Pro+.html" class="slide-cart" id="slide-cart8"><span>Add Cart</span></a>
