--- a/Accessories.html
+++ b/Accessories.html
@@ -412,7 +412,7 @@
                                             <img src="image/pad.jpg" class="img-item"
                                                 alt="PS4 DualShock 4 Wireless Controller">
                                             <h2 class="text-light">PS4 DualShock Controller</h2>
-                                            <span>-$114</span>
+                                            <span>$114</span>
                                             <a href="/each-products/PS4.html" class="slide-cart"
                                                 id="slide-cart"><span>Add Cart</span></a>
                                         </div>
@@ -589,98 +589,98 @@
 
 
         $('#slide-container').mouseleave(function () {
-            $('#slide-cart').hide(1000);
+            $('#slide-cart').hide(500);
         })
         $('#slide-container').mouseenter(function () {
             $('#slide-cart').css({ 'display': 'flex' })
-            $('#slide-cart').show(1000);
+            $('#slide-cart').show(500);
         })
 
         $('#slide-container2').mouseleave(function () {
-            $('#slide-cart2').hide(1000);
+            $('#slide-cart2').hide(500);
         })
         $('#slide-container2').mouseenter(function () {
             $('#slide-cart2').css({ 'display': 'flex' })
-            $('#slide-cart2').show(1000);
+            $('#slide-cart2').show(500);
         })
 
         $('#slide-container3').mouseleave(function () {
-            $('#slide-cart3').hide(1000);
+            $('#slide-cart3').hide(500);
         })
         $('#slide-container3').mouseenter(function () {
             $('#slide-cart3').css({ 'display': 'flex' })
-            $('#slide-cart3').show(1000);
+            $('#slide-cart3').show(500);
         })
         $('#slide-container4').mouseleave(function () {
-            $('#slide-cart4').hide(1000);
+            $('#slide-cart4').hide(500);
         })
         $('#slide-container4').mouseenter(function () {
             $('#slide-cart4').css({ 'display': 'flex' })
-            $('#slide-cart4').show(1000);
+            $('#slide-cart4').show(500);
         })
 
         $('#slide-container5').mouseleave(function () {
-            $('#slide-cart5').hide(1000);
+            $('#slide-cart5').hide(500);
         })
         $('#slide-container5').mouseenter(function () {
             $('#slide-cart5').css({ 'display': 'flex' })
-            $('#slide-cart5').show(1000);
+            $('#slide-cart5').show(500);
         })
 
         $('#slide-container6').mouseleave(function () {
-            $('#slide-cart6').hide(1000);
+            $('#slide-cart6').hide(500);
         })
         $('#slide-container6').mouseenter(function () {
             $('#slide-cart6').css({ 'display': 'flex' })
-            $('#slide-cart6').show(1000);
+            $('#slide-cart6').show(500);
         })
 
         $('#slide-container7').mouseleave(function () {
-            $('#slide-cart7').hide(1000);
+            $('#slide-cart7').hide(500);
         })
         $('#slide-container7').mouseenter(function () {
             $('#slide-cart7').css({ 'display': 'flex' })
-            $('#slide-cart7').show(1000);
+            $('#slide-cart7').show(500);
         })
 
         $('#slide-container8').mouseleave(function () {
-            $('#slide-cart8').hide(1000);
+            $('#slide-cart8').hide(500);
         })
         $('#slide-container8').mouseenter(function () {
             $('#slide-cart8').css({ 'display': 'flex' })
-            $('#slide-cart8').show(1000);
+            $('#slide-cart8').show(500);
         })
 
         $('#slide-container9').mouseleave(function () {
-            $('#slide-cart9').hide(1000);
+            $('#slide-cart9').hide(500);
         })
         $('#slide-container9').mouseenter(function () {
             $('#slide-cart9').css({ 'display': 'flex' })
-            $('#slide-cart9').show(1000);
+            $('#slide-cart9').show(500);
         })
 
         $('#slide-container10').mouseleave(function () {
-            $('#slide-cart10').hide(1000);
+            $('#slide-cart10').hide(500);
         })
         $('#slide-container10').mouseenter(function () {
             $('#slide-cart10').css({ 'display': 'flex' })
-            $('#slide-cart10').show(1000);
+            $('#slide-cart10').show(500);
         })
 
         $('#slide-container11').mouseleave(function () {
-            $('#slide-cart11').hide(1000);
+            $('#slide-cart11').hide(500);
         })
         $('#slide-container11').mouseenter(function () {
             $('#slide-cart11').css({ 'display': 'flex' })
-            $('#slide-cart11').show(1000);
+            $('#slide-cart11').show(500);
         })
 
         $('#slide-container12').mouseleave(function () {
-            $('#slide-cart12').hide(1000);
+            $('#slide-cart12').hide(500);
         })
         $('#slide-container12').mouseenter(function () {
             $('#slide-cart12').css({ 'display': 'flex' })
-            $('#slide-cart12').show(1000);
+            $('#slide-cart12').show(500);
         })
     </script>
 </body>
