--- a/Mobile.html
+++ b/Mobile.html
@@ -438,7 +438,7 @@
                                              <img src="image/oppo amy special.jpg" class="img-item"
                                                     alt="OPPO Find X7 Ultra">
                                             <h2 class="text-light">OPPO Find X7 Ultra</h2>
-                                           <strike>$210</strike><span>-$204</span>
+                                           <span><strike>$210</strike><span>-$204</span></span>
                                            <a href="/each-products/OPPO Find X7 Ultra.html" class="slide-cart" id="slide-cart"><span>Add Cart</span></a>
                                         </div>
 
@@ -458,7 +458,7 @@
                                              <img src="images/samsung.jpg" class="img-item"
                                                     alt="Samsung Galaxy A32">
                                             <h2 class="text-light"> Samsung Galaxy A32</h2>
-                                            <span>-$109.44</span>
+                                            <span>$109.44</span>
                                             <a href="/each-products/Samsung Galaxy A32.html" class="slide-cart" id="slide-cart3"><span>Add Cart</span></a>
                                         </div>
                                     </div>
@@ -503,7 +503,7 @@
                                                     alt="Oppo Reno 10 Pro+">
                                             <h2 class="text-light">Oppo Reno 10 Pro+</h2>
                                             <span>-$120</span>
-                                            <a href="/each-products/Oppo Reno 10 Pro+.html" class="slide-cart" id="slide-cart8"><span>Add Cart</span></a>
+                                            <a href="each-products/Oppo Reno 10 Pro+.html" class="slide-cart" id="slide-cart8"><span>Add Cart</span></a>
                                         </div>
                                     </div>
                                 </div>
@@ -573,76 +573,76 @@
         })
 
         // $('#slide-container').mouseenter(function(){
-        //     $('#slide-cart').fadeIn(1000);
+        //     $('#slide-cart').fadeIn(500);
         //     // alert('hello')
         // })
         // $('#slide-container').mouseleave(function(){
-        //     $('#slide-cart').fadeOut(1000);
+        //     $('#slide-cart').fadeOut(500);
 
         //     // alert('hello')
         // })
 
         $('#slide-container').mouseleave(function(){
-            $('#slide-cart').hide(1000);
+            $('#slide-cart').hide(500);
         })
         $('#slide-container').mouseenter(function(){
             $('#slide-cart').css({'display':'flex'})
-            $('#slide-cart').show(1000);   
+            $('#slide-cart').show(500);   
         })
 
         $('#slide-container2').mouseleave(function(){
-            $('#slide-cart2').hide(1000);
+            $('#slide-cart2').hide(500);
         })
         $('#slide-container2').mouseenter(function(){
             $('#slide-cart2').css({'display':'flex'})
-            $('#slide-cart2').show(1000);   
+            $('#slide-cart2').show(500);   
         })
 
         $('#slide-container3').mouseleave(function(){
-            $('#slide-cart3').hide(1000);
+            $('#slide-cart3').hide(500);
         })
         $('#slide-container3').mouseenter(function(){
             $('#slide-cart3').css({'display':'flex'})
-            $('#slide-cart3').show(1000);
+            $('#slide-cart3').show(500);
         })
         $('#slide-container4').mouseleave(function(){
-            $('#slide-cart4').hide(1000);
+            $('#slide-cart4').hide(500);
         })
         $('#slide-container4').mouseenter(function(){
             $('#slide-cart4').css({'display':'flex'})
-            $('#slide-cart4').show(1000);
+            $('#slide-cart4').show(500);
         })
 
         $('#slide-container5').mouseleave(function(){
-            $('#slide-cart5').hide(1000);
+            $('#slide-cart5').hide(500);
         })
         $('#slide-container5').mouseenter(function(){
             $('#slide-cart5').css({'display':'flex'})
-            $('#slide-cart5').show(1000);
+            $('#slide-cart5').show(500);
         })
 
         $('#slide-container6').mouseleave(function(){
-            $('#slide-cart6').hide(1000);
+            $('#slide-cart6').hide(500);
         })
         $('#slide-container6').mouseenter(function(){
             $('#slide-cart6').css({'display':'flex'})
-            $('#slide-cart6').show(1000);
+            $('#slide-cart6').show(500);
         })
 
         $('#slide-container7').mouseleave(function(){
-            $('#slide-cart7').hide(1000);
+            $('#slide-cart7').hide(500);
         })
         $('#slide-container7').mouseenter(function(){
             $('#slide-cart7').css({'display':'flex'})
-            $('#slide-cart7').show(1000);
+            $('#slide-cart7').show(500);
         })
 
         $('#slide-container8').mouseleave(function(){
-            $('#slide-cart8').hide(1000);
+            $('#slide-cart8').hide(500);
         })
         $('#slide-container8').mouseenter(function(){
             $('#slide-cart8').css({'display':'flex'})
-            $('#slide-cart8').show(1000);
+            $('#slide-cart8').show(500);
         })
 
         
