--- a/Mobile.html
+++ b/Mobile.html
@@ -502,7 +502,7 @@
                                             <img src="image/PHONE- (4).jpg" class="img-item"
                                                     alt="Oppo Reno 10 Pro+">
                                             <h2 class="text-light">Oppo Reno 10 Pro+</h2>
-                                            <span>-$120</span>
+                                            <span>$120</span>
                                             <a href="each-products/Oppo Reno 10 Pro+.html" class="slide-cart" id="slide-cart8"><span>Add Cart</span></a>
                                         </div>
                                     </div>
